--- a/Views/Auth/ForgotPasswordBasic.cshtml
+++ b/Views/Auth/ForgotPasswordBasic.cshtml
@@ -24,7 +24,7 @@
             </a>
           </div>
           <!-- /Logo -->
-          <h4 class="mb-1">Forgot Password? 🔒</h4>
+          <h4 class="mb-1">Forgot Password?</h4>
           <p class="mb-6">Enter your email and we'll send you instructions to reset your password</p>
           <form id="formAuthentication" class="mb-6" action="~/" method="POST">
             <div class="mb-6">
